<resources>
    <string name="app_name">Travel App</string>
    <string name="Instructione">Lorem ipsum dolor sit amet,\n consectetur adipiscing elit. Semper\n sed mattis vitae.</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="place_or_location">Place or Location</string>
    <string name="your_city">Your City</string>
    <string name="price">Price</string>
    <string name="day">Day</string>
    <string name="discription">Discription</string>
    <string name="rating">Rating</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="contact_number">Contact Number</string>
    <string name="add">Add</string>
    <string name="favourite">Favourite</string>
    <string name="place_name">Place Name</string>
    <string name="location">Location</string>
    <string name="rate">Rate</string>
    <string name="forest">Forest</string>

    <style name="LoginTextInputOuterFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_marginTop">@dimen/_10sdp</item>
    </style>

    <style name="LoginTextInputInnerFieldStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textColorHint">@color/black</item>
        <item name="android:maxLines">1</item>
        <item name="android:textSize">14sp</item>
        <item name="android:singleLine">true</item>
    </style>
</resources>