<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AdaminActivity"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:id="@+id/imgCircleImageView"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/btnselectimag"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                app:cardBackgroundColor="@color/dark"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_image"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place_or_location"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_city"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/day"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/discription"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rating"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_e_mail"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_number"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:boxStrokeColor="@color/dark"
                app:hintEnabled="true"
                app:hintTextColor="@color/dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFavourite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/favourite"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/BtnAdd"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                app:cardBackgroundColor="@color/dark"
                app:cardCornerRadius="@dimen/_50sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <!--            <Button-->
            <!--                android:id="@+id/Btnshow"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_margin="@dimen/_10sdp"-->
            <!--                android:text="Show"-->
            <!--                android:textColor="@color/black" />-->

        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>